--- a/ch09/index.html
+++ b/ch09/index.html
@@ -82,7 +82,8 @@
 		  	 				<article class="notebook">
 		  	 					<div class="detail_content">
 		  	 						<div class="img_book">
-		  	 							<img src="./images/book1.png" alt="Do it! HTML5+CSS3 웹 표준의 정석 <개정판>" />
+										<strong>※절판 주의</strong>
+		  	 							<img src="./images/book1.png" alt="Do it! HTML5+CSS3 웹 표준의 정석 <개정판>" />   
 		  	 						</div>
 		  	 						<section class="book_description">
 		  	 							<h4>Do it! HTML5+CSS3 웹 표준의 정석 &#60; 개정판 &#62;</h4>
@@ -97,7 +98,7 @@
 										<p class="point_text">
 											<strong>문과생도 컴맹도 아무 것도 몰라도 <br />이 한권으로 OK!</strong>
 											이 책으로 공부하면 기초 태그부터 반응형 웹까지 한 번에 배울 수 있습니다. 자세한 설명과
-											간단명료한 많은 예제로 웹 표준의 정석을 익힐 수 있습니다.
+											간단명료한 많은 예제로 웹 표준의 정석을 익힐 수 있습니다. <b>절판 확인은 구매사이트에서 확인바랍니다.</b>
 										</p>
 										<a href="http://easyspub.co.kr/20_Menu/BookView/119/PUB" class="commbtn pink" target="blank">구매사이트</a>
 									</section>
