--- a/ch09/index.html
+++ b/ch09/index.html
@@ -9,8 +9,6 @@
 <!--<meta name="format-detection" content="telephone=no, address=no, email=no" />-->
 <!-- 기본 포맷 삭제 -->
 <!--<meta name="format-detection" content="no" />-->
-<!-- 문의 사항 -->
-<!-- <action=https://script.google.com/macros/s/AKfycbwEYNmz7XdsGAA0JfzCdIUepe7wBf_JNWdz2hsZ/exec> -->
 <meta name="title"  property="og:title" content="Do it! 웹 사이트 하나 만들고 웹 퍼블리셔 되기">
 <meta name="images" property="og:image" content="./images/link_thumb.jpg">
 <meta name="description" property="og:description" content="한번의 실습을 통해 프로페셔널한 퍼블리셔가 될 수 있습니다.">
@@ -161,7 +159,7 @@
 		  	 	<div class="conbox">
 		  	 		<section class="content_wrap">
 		  	 			<h3 class="form_tit">지금 이지스퍼블리싱에 물어보세요!!</h3>
-						<form class="gform" method="post" action="https://script.google.com/macros/s/AKfycbzGQTIrLs_vcFWKPcKIfKT7DvSCpWM-5YZImXhx0zGJ-zSvzSg/exec" name="contactus">
+						<form class="gform" method="post" action="" name="contactus">
 							<fieldset>
 								<legend>Contact Us</legend>
 								<div class="formlist">
